--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>Universitet İdarəetmə Sistemi</title>
   </head>
   <body>
-
     <!-- Sayt başlığı və menyu -->
     <header>
       <h1>Azərbaycan Universitet İdarəetmə Sistemi</h1>
@@ -27,11 +26,13 @@
     </header>
 
     <main>
-
       <!-- Dashboard -->
       <section id="dashboard">
         <h2>Əsas Panel</h2>
-        <p>Xoş gəlmisiniz! Buradan bütün idarəetmə bölmələrinə keçid edə bilərsiniz.</p>
+        <p>
+          Xoş gəlmisiniz! Buradan bütün idarəetmə bölmələrinə keçid edə
+          bilərsiniz.
+        </p>
       </section>
 
       <!-- Tələbə qeydiyyat formu -->
@@ -59,8 +60,8 @@
               <option disabled selected>İxtisas sec</option>
               <option value="it">İT</option>
               <option value="riyaz">Riyaziyyat</option>
-              <option value="bio">Biologiya</option>
-            </select><br />
+              <option value="bio">Biologiya</option></select
+            ><br />
             <label for="email">Email:</label>
             <input type="email" id="email" /><br />
             <label for="phone">Telefon:</label>
@@ -78,24 +79,48 @@
         <table border="1">
           <thead>
             <tr>
-              <th>#</th><th>Ad</th><th>Fakültə</th><th>Email</th><th>Telefon</th>
+              <th>#</th>
+              <th>Ad</th>
+              <th>Fakültə</th>
+              <th>Email</th>
+              <th>Telefon</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td>1</td><td>John Doe</td><td>İT</td><td>john@doe.az</td><td>0501234567</td>
+              <td>1</td>
+              <td>John Doe</td>
+              <td>İT</td>
+              <td>john@doe.az</td>
+              <td>0501234567</td>
             </tr>
             <tr>
-              <td>2</td><td>John2 Doe2</td><td>Biologiya</td><td>john2@doe.az</td><td>0517654321</td>
+              <td>2</td>
+              <td>John2 Doe2</td>
+              <td>Biologiya</td>
+              <td>john2@doe.az</td>
+              <td>0517654321</td>
             </tr>
             <tr>
-              <td>3</td><td>John2 Doe2</td><td>Biologiya</td><td>john2@doe.az</td><td>0517654321</td>
+              <td>3</td>
+              <td>John2 Doe2</td>
+              <td>Biologiya</td>
+              <td>john2@doe.az</td>
+              <td>0517654321</td>
             </tr>
             <tr>
-              <td>4</td><td>John2 Doe2</td><td>Biologiya</td><td>john2@doe.az</td><td>0517654321</td>
+              <td>4</td>
+              <td>John2 Doe2</td>
+              <td>Biologiya</td>
+              <td>john2@doe.az</td>
+              <td>0517654321</td>
             </tr>
             <tr>
-              <td>5</td><td>John2 Doe2</td><td>Biologiya</td><td>john2@doe.az</td><td>0517654321</td>
+              <td>5</td>
+              <td>John2 Doe2</td>
+              <td>Biologiya</td>
+              <td>john2@doe.az</td>
+              <td>0517654321</td>
             </tr>
           </tbody>
         </table>
@@ -137,11 +162,23 @@
         <h2>İmtahanlar</h2>
         <table border="1">
           <thead>
-            <tr><th>Fənn</th><th>Tarix</th><th>Otaq</th></tr>
+            <tr>
+              <th>Fənn</th>
+              <th>Tarix</th>
+              <th>Otaq</th>
+            </tr>
           </thead>
           <tbody>
-            <tr><td>Riyaziyyat</td><td>15/06/2025</td><td>203</td></tr>
-            <tr><td>Web Proqramlaşdırma</td><td>20/06/2025</td><td>102</td></tr>
+            <tr>
+              <td>Riyaziyyat</td>
+              <td>15/06/2025</td>
+              <td>203</td>
+            </tr>
+            <tr>
+              <td>Web Proqramlaşdırma</td>
+              <td>20/06/2025</td>
+              <td>102</td>
+            </tr>
           </tbody>
         </table>
       </section>
@@ -161,11 +198,16 @@
         <h2>Tədbirlər</h2>
         <article>
           <h3>Elmi Konfrans</h3>
-          <p>25 İyun 2025 tarixində keçiriləcək. Bütün müəllim və tələbələr dəvətlidir.</p>
+          <p>
+            25 İyun 2025 tarixində keçiriləcək. Bütün müəllim və tələbələr
+            dəvətlidir.
+          </p>
         </article>
         <article>
           <h3>Karyera Günü</h3>
-          <p>Şirkət nümayəndələri ilə görüş və iş imkanları haqqında məlumat.</p>
+          <p>
+            Şirkət nümayəndələri ilə görüş və iş imkanları haqqında məlumat.
+          </p>
         </article>
       </section>
 
@@ -184,14 +226,51 @@
       <!-- Haqqımızda bölməsi -->
       <section id="about">
         <h2>Haqqımızda</h2>
-        <p>Azərbaycan Universiteti 1960-cı ildən fəaliyyət göstərir. Burada 100-dən çox müəllim və 2000-dən artıq tələbə təhsil alır.</p>
+        <p>
+          Azərbaycan Universiteti 1960-cı ildən fəaliyyət göstərir. Burada
+          100-dən çox müəllim və 2000-dən artıq tələbə təhsil alır.
+        </p>
       </section>
-
     </main>
 
     <footer>
       <p>&copy; 2025 AZ Universitet. Bütün hüquqlar qorunur.</p>
     </footer>
-
+    <hr />
+    <h3>Health Chart</h3>
+    <table border="1">
+      <thead>
+        <tr>
+          <th rowspan="2">State of Health</th>
+          <th colspan="2">Fasting Value</th>
+          <th>After Eating</th>
+        </tr>
+        <tr>
+          <th>Minimum</th>
+          <th>Maximum</th>
+          <th>2 hours after eating</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Healty</td>
+          <td>70</td>
+          <td>100</td>
+          <td>Less than 140</td>
+        </tr>
+        <tr>
+          <td>Healty</td>
+          <td>70</td>
+          <td>100</td>
+          <td>Less than 140</td>
+        </tr>
+        <tr>
+          <td>Healty</td>
+          <td>70</td>
+          <td>100</td>
+          <td>Less than 140</td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
